Use same height for sidebar as the rest of the yaml editor. Fixes an issue with double-scrollbars.

--- a/frontend/public/components/cluster-settings/_cluster-settings.scss
+++ b/frontend/public/components/cluster-settings/_cluster-settings.scss
@@ -21,7 +21,6 @@
 .co-p-cluster__sidebar {
   flex: 0 2 340px;
   font-size: 13px;
-  height: 100vh;
   min-width: 340px;
   overflow-x: hidden;
   overflow-y: auto;
